--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@ant-design/icons": "^6.0.0",
     "@monaco-editor/react": "^4.7.0",
     "@tanstack/react-query": "^5.81.5",
+    "@xterm/addon-fit": "^0.10.0",
+    "@xterm/xterm": "^5.5.0",
     "antd": "^5.26.4",
     "axios": "^1.10.0",
     "react": "^19.1.0",
